# rowboat

./: .env.example  .gitignore  README.md  Rowboat_Pitch_Deck.pptx  alembic.ini  generate_pitch_deck.py  generate_report.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
.claude/: launch.json  settings.local.json
.streamlit/: config.toml
alembic/: env.py
data/: sample_preferences.json  sample_venues.json
docs/: LLM_HANDOFF_DISCOVER_PRESETS.md  POSTGRES_MIGRATION.md  SHIP_READY_ROADMAP.md
src/: config.py  main.py
src/agents/: calendar_agent.py  orchestrator_agent.py  preference_agent.py  recommendation_agent.py  search_agent.py
src/api/: auth.py  calendar.py  friends.py  groups.py  hangouts.py  plans.py  preferences.py  presets.py  profile.py
src/constraints/: solver.py
src/db/: crud.py  database.py  session.py  tables.py
src/matching/: scorer.py
src/models/: constraints.py  event.py  feedback.py  hangout.py  preset.py  user.py
src/presets/: __init__.py  agent.py  catalog.py
src/rag/: venue_store.py
src/tools/: eventbrite.py  google_calendar.py  google_places.py  ticketmaster.py  yelp.py
src/ui/: app.py
src/ui/pages/: 01_create_group.py  02_preferences.py  03_connect_calendar.py  04_plan.py  05_review_book.py  (+1 more)
tests/: conftest.py  test_authz.py  test_config_status.py  test_constraints.py  test_db.py  test_hangouts.py  test_models.py  test_orchestrator.py  test_scorer.py
tests/test_agents/: test_pipeline.py
tests/test_tools/: test_calendar.py  test_yelp.py
web/: next.config.ts  package-lock.json  package.json
(+22 files in other folders)
