[project]
name = "rowboat"
version = "0.1.0"
description = "AI-powered group outing coordination platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "streamlit>=1.30",
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
